# lan-mic-receiver

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
receiver/: .gitignore  Cargo.toml  README.md
receiver/src/: app.rs  icon.rs  main.rs
receiver/src/audio/: mod.rs
receiver/src/core/: mod.rs  signaling.rs
receiver/src/core/signaling/: webrtc_session.rs
sender(ios)/: .gitignore
sender(ios)/Lan Mic/: Lan_MicApp.swift
sender(ios)/Lan Mic.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
sender(ios)/Lan Mic.xcodeproj/xcshareddata/xcschemes/: Lan Mic.xcscheme
sender(ios)/Lan Mic/Assets.xcassets/AppIcon.appiconset/: Contents.json
sender(ios)/Lan Mic/Audio/: AudioSessionManager.swift
sender(ios)/Lan Mic/Discovery/: ReceiverDiscovery.swift
sender(ios)/Lan Mic/Signaling/: SignalingClient.swift
sender(ios)/Lan Mic/ViewModel/: ConnectionViewModel.swift
sender(ios)/Lan Mic/WebRTC/: WebRTCManager.swift
sender(web)/: index.html
sender/Lan Mic/: ContentView.swift  Lan_MicApp.swift
sender/Lan Mic.xcodeproj/: project.pbxproj
sender/Lan Mic.xcodeproj/xcshareddata/xcschemes/: Lan Mic.xcscheme
sender/Lan Mic/Assets.xcassets/AppIcon.appiconset/: Contents.json
sender/Lan Mic/Audio/: AudioSessionManager.swift
sender/Lan Mic/Discovery/: ReceiverDiscovery.swift
sender/Lan Mic/Signaling/: SignalingClient.swift
sender/Lan Mic/ViewModel/: ConnectionViewModel.swift
sender/Lan Mic/WebRTC/: WebRTCManager.swift
