[package]
name = "lan-mic-webrtc-receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
iced = { version = "0.13", features = ["tokio"] }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
webrtc = "0.17.1"
cpal = "0.15"
crossbeam-queue = "0.3"
local-ip-address = "0.6"
log = "0.4"
env_logger = "0.11"
opus = { version = "0.3.1" }
single-instance = "0.3"
tray-icon = "0.19"
image = "0.25"
mdns-sd = { version = "0.12", features = ["async"] }
gethostname = "0.5"
